== Groups by itthinx - changelog.txt

= 3.1.0 =
* WordPress 6.5 compatible.
* Code doc corrections and revisions.
* Implements cautionary filter adjustments to avoid potential circular dependencies.

= 3.0.0 =
* WordPress 6.5 compatible.
* The Grand Refactoring, Episode I. Properties, Getters, Setters.
* Added getters and setters to OPM classes.
* Fixed an error that could occur in certain processing flows when wp_get_current_user() is not yet defined.
* Introduces own current user capability check class methods in Groups_User class for coherency.
* Replaced uses of the obsolete var keyword to declare class properties.
* Added several instances of missing code documentation.
* Revised needed code doc formatting.
* Replaced uses of the extract function with specific parameter handling.
* Removed the tests folder and script.
* Added output escaping to instances in code where it was missing.
* Updated the translation template.
* Updated the included translations.
* Extended capability handling methods for group and user objects with object and additional arguments.
* Refactored to access properties via methods.
* Fixed deprecated notice for null parameter when editing a group with no description.
* Fixed deprecated notice for null parameter when editing a capability with no description.
* Fixed backslashes rendered for some quoted characters in group names rendered with the [groups_groups] shortcode, added missing escaping.
* Fixed backslashes rendered for some quoted characters in group names rendered with the [groups_user_groups] shortcode, added missing escaping.
* Fixed several instances of code format issues, superfluous whitespace.
* Code doc corrections and revisions.

= 2.20.1 =
* WordPress 6.4 compatible.
* Fixes user counts per group all showing zero on the Users admin screen for the group filter.

= 2.20.0 =
* WordPress 6.4 compatible.
* Added compatibility plugin header fields.
* Added various missing code documentation.