@@ -75,6 +75,38 @@ class Groups_WordPress {
 	}
 
 	/**
+	 * Whether the given user has the capability.
+	 *
+	 * Calls Groups_User::user_can() with user_has_cap and groups_user_can filters temporarily removed.
+	 *
+	 * @since 3.1.0
+	 *
+	 * @param int|WP_User $user user ID or object
+	 * @param string $capability capability name
+	 * @param mixed ...$args optional parameters, typically an object ID
+	 *
+	 * @return boolean
+	 */
+	private static function unfiltered_user_can( $user, $capability, ...$args ) {
+		// We want to check without the capabilities granted to the user via groups.
+		// Groups_User::user_can() relies on user_can() or WP_User->has_cap() in the absense of the former,
+		// which will cause our user_has_cap filter to act so we have to remove it temporarily.
+		// To avoid potential internal conflicts or cicular dependencies, we also remove the groups_user_can filter which
+		// relies on this method.
+		$result = false;
+		$filter_user_has_cap = remove_filter( 'user_has_cap', array( __CLASS__, 'user_has_cap' ), self::USER_HAS_CAP_FILTER_PRIORITY ); // @since 3.1.0
+		$filter_groups_user_can = remove_filter( 'groups_user_can', array( __CLASS__, 'groups_user_can' ), self::GROUPS_USER_CAN_FILTER_PRIORITY ); // @since 3.1.0
+		$result = Groups_User::user_can( $user, $capability, ...$args );
+		if ( $filter_user_has_cap ) {
+			add_filter( 'user_has_cap', array( __CLASS__, 'user_has_cap' ), self::USER_HAS_CAP_FILTER_PRIORITY, 4 );
+		}
+		if ( $filter_groups_user_can ) {
+			add_filter( 'groups_user_can', array( __CLASS__, 'groups_user_can' ), self::GROUPS_USER_CAN_FILTER_PRIORITY, 5 );
+		}
+		return $result;
+	}
+
+	/**
 	 * Extends Groups user capability with its WP_User capability.
 	 *
 	 * @param boolean $result
@@ -86,16 +118,12 @@ class Groups_WordPress {
 	 * @return boolean
 	 */
 	public static function groups_user_can( $result, $groups_user, $capability, $object, $args ) {
-		//
-		// We MUST NOT call Groups_User::user_can() instead of user_can() here!
-		//
 		// The intention here is to complement capabilities from groups with those from the user.
 		// Our user_has_cap filter extends user capabilities with those from groups, i.e. the reverse complementary.
 		// Thus, our user_has_cap filter should not be involved here. Also, we want to avoid any potential circular
 		// dependency which could arise from having our groups_user_can fired again while we attend to that action here.
-		//
-		remove_filter( 'user_has_cap', array( __CLASS__, 'user_has_cap' ), self::USER_HAS_CAP_FILTER_PRIORITY ); // @since 3.1.0
-		remove_filter( 'groups_user_can', array( __CLASS__, 'groups_user_can' ), self::GROUPS_USER_CAN_FILTER_PRIORITY ); // @since 3.1.0
+		// To avoid any potential hickups, we also remove the filter while we handle it.
+		$filter_groups_user_can = remove_filter( 'groups_user_can', array( __CLASS__, 'groups_user_can' ), self::GROUPS_USER_CAN_FILTER_PRIORITY ); // @since 3.1.0
 		if ( !$result ) {
 			// Check if the capability exists, otherwise this will
 			// produce a deprecation warning "Usage of user levels by plugins
@@ -106,7 +134,7 @@ class Groups_WordPress {
 					$user_id = $groups_user->get_user_id();
 					if ( $user_id !== null ) {
 						if ( $object === null ) {
-							$result = user_can( $user_id, $capability );
+							$result = self::unfiltered_user_can( $user_id, $capability );
 						} else {
 							// @since 3.0.0
 							$object_id = null;
@@ -119,17 +147,18 @@ class Groups_WordPress {
 							// With prior PHP versions, the order in which values appear in an $args array
 							// determines the order of the parameters passed.
 							if ( $object_id !== null ) {
-								$result = user_can( $user_id, $capability, $object_id, ...$args );
+								$result = self::unfiltered_user_can( $user_id, $capability, $object_id, ...$args );
 							} else {
-								$result = user_can( $user_id, $capability, $object, ...$args );
+								$result = self::unfiltered_user_can( $user_id, $capability, $object, ...$args );
 							}
 						}
 					}
 				}
 			}
 		}
-		add_filter( 'user_has_cap', array( __CLASS__, 'user_has_cap' ), self::USER_HAS_CAP_FILTER_PRIORITY, 4 ); // @since 3.1.0
-		add_filter( 'groups_user_can', array( __CLASS__, 'groups_user_can' ), self::GROUPS_USER_CAN_FILTER_PRIORITY, 5 ); // @since 3.1.0
+		if ( $filter_groups_user_can ) {
+			add_filter( 'groups_user_can', array( __CLASS__, 'groups_user_can' ), self::GROUPS_USER_CAN_FILTER_PRIORITY, 5 ); // @since 3.1.0
+		}
 		return $result;
 	}
 
