@@ -4,6 +4,8 @@
 * WordPress 6.5 compatible.
 * Code doc corrections and revisions.
 * Implements cautionary filter adjustments to avoid potential circular dependencies.
+* Added resilience in user capability checks which depend on core scripts load order.
+* Added checks to assure the existence of a Groups_User class method to avoid potential errors on install or update.
 
 = 3.0.0 =
 * WordPress 6.5 compatible.
